# thundershare

./: README.md
thundershare-backend/: Cargo.toml  Dockerfile  docker-compose.yaml
thundershare-backend/migrations/: 20240201031055_add_customer_table.sql  20240201034357_add_signout_token_table.sql  20240201034641_add_filemeta_table.sql  20240201091625_Add_filesharingmeta_table.sql
thundershare-backend/src/: main.rs
thundershare-backend/src/domain/: mod.rs
thundershare-backend/src/domain/entity/: customer.rs  file_meta.rs  identity.rs  mod.rs
thundershare-backend/src/domain/error/: customer.rs  file.rs
thundershare-backend/src/domain/repository/: customer.rs  file_meta.rs  file_sharing.rs  mod.rs  used_token.rs
thundershare-backend/src/domain/service/: customer.rs  customer_test.rs  file.rs  file_test.rs  mod.rs
thundershare-backend/src/pgsql/: customer.rs  file_meta.rs  file_sharing.rs  mod.rs  used_token.rs
thundershare-backend/src/presentation/: mod.rs
thundershare-backend/src/presentation/customer/: dto.rs  mod.rs  view.rs
thundershare-backend/src/presentation/file/: dto.rs  mod.rs  view.rs
