[package]
name = "thundershare-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.4.1"
anyhow = "1.0.79"
async-trait = "0.1.77"
chrono = "0.4.33"
dotenv = "0.15.0"
env_logger = "0.11.1"
jsonwebtoken = "9.2.0"
mockall = "0.12.1"
serde = {version = "1.0.196", features = ["std", "derive"]}
serde_json = "1.0.112"
sqlx = {version = "0.7.3", features = [ "runtime-tokio-rustls", "chrono", "postgres", "uuid" ]}
thiserror = "1.0.56"
tokio = "1.35.1"
urlencoding = "2.1.3"
uuid = { version = "1.7.0", features = ["serde"] }
